05-data-etl/01-polaris-catalog-deployment/06-polaris-catalog-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polaris-catalog
  namespace: polaris-tsdb-catalog
  labels:
    app: polaris
    component: catalog
spec:
  replicas: 1
  # Ensure resource relealse before restarting
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: polaris
  template:
    metadata:
      labels:
        app: polaris
    spec:
      containers:
      - name: polaris
        image: apache/polaris:1.3.0-incubating
        ports:
        - containerPort: 8181
          name: http
        - containerPort: 8182
          name: management
        # ---- Env vars to set up
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"

        volumeMounts:
        - name: polaris-data
          mountPath: /var/polaris

        # livenessProbe:
        #   httpGet:
        #     path: /q/health/live
        #     port: 8182
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   failureThreshold: 3
        # readinessProbe:
        #   httpGet:
        #     path: /q/health/ready
        #     port: 8182
        #   initialDelaySeconds: 10
        #   periodSeconds: 5
        #   failureThreshold: 3

      volumes:
      - name: polaris-data
        persistentVolumeClaim:
          claimName: polaris-data
