05-data-etl/01-polaris-catalog-deployment/07-polaris-catalog-svc-ing.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: polaris
  namespace: polaris-tsdb-catalog
  labels:
    app: polaris
spec:
  type: ClusterIP
  ports:
  - port: 8181
    targetPort: 8181
    protocol: TCP
    name: http
  selector:
    app: polaris
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: orfeo-ipa-dev
  name: polaris-ingress
  namespace: polaris-tsdb-catalog
spec:
  ingressClassName: nginx-devel
  rules:
  - host: <YOUR_POLARIS_CATALOG_HOST>                             # <-- TODO: replace this
    http:
      paths:
      - backend:
          service:
            name: polaris
            port:
              number: 8181
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - <YOUR_POLARIS_CATALOG_HOST>                                 # <-- TODO: replace this
